--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -515,4 +515,9 @@ footer {
   right: -30%;
 }
 
+.bg-pattern.pattern-1,
+.bg-pattern.pattern-2 {
+  display: none;
+}
+
 @import 'about-responsive';
