--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -530,6 +530,10 @@ footer {
   z-index: 1;
 }
 
+.bg-pattern.pattern-1,
+.bg-pattern.pattern-2 {
+  display: none;
+}
 // @import 'shared';
 
 @import 'main-responsive';
