--- a/src/scss/_about-responsive.scss
+++ b/src/scss/_about-responsive.scss
@@ -133,10 +133,15 @@
 }
 
 @media (max-width: 600px) {
+  #header-container {
+    padding: 20px 0;
+    height: auto;
+  }
+
   .header {
     & .links {
       position: absolute;
-      top: 93px;
+      top: 73.2px;
       left: 0;
       flex-direction: column;
       align-items: flex-start;
@@ -230,7 +235,7 @@
   }
 
   #about-hero-container {
-    margin-top: 94.5px;
+    margin-top: 73.2px;
   }
   .about-hero {
     width: 100%;
