--- a/src/scss/_contact-responsive.scss
+++ b/src/scss/_contact-responsive.scss
@@ -47,12 +47,6 @@
     &:not(:last-child) {
       margin-bottom: 70px;
     }
-
-    &-content {
-      & .location-name {
-        font-weight: map-get(c.$font-sizes, H2);
-      }
-    }
   }
 
   .cta {
@@ -97,10 +91,15 @@
 }
 
 @media (max-width: 600px) {
+  #header-container {
+    padding: 20px 0;
+    height: auto;
+  }
+
   .header {
     & .links {
       position: absolute;
-      top: 93px;
+      top: 73.2px;
       left: 0;
       flex-direction: column;
       align-items: flex-start;
@@ -194,7 +193,7 @@
   }
 
   #contact-hero-container {
-    margin-top: 94.5px;
+    margin-top: 73.2px;
   }
 
   .contact-hero {
