--- a/src/scss/_locations-responsive.scss
+++ b/src/scss/_locations-responsive.scss
@@ -1,6 +1,9 @@
 @use 'config' as c;
 
 @media (max-width: 768px) {
+  #locations-container {
+    margin-top: 94.5px;
+  }
   .location {
     flex-direction: column-reverse;
     width: 100%;
@@ -70,10 +73,15 @@
 }
 
 @media (max-width: 600px) {
+  #header-container {
+    padding: 20px 0;
+    height: auto;
+  }
+
   .header {
     & .links {
       position: absolute;
-      top: 93px;
+      top: 73.2px;
       left: 0;
       flex-direction: column;
       align-items: flex-start;
@@ -166,6 +174,10 @@
     }
   }
 
+  #locations-container {
+    margin-top: 73.2px;
+  }
+
   .locations {
     width: 100%;
   }
@@ -186,6 +198,7 @@
       margin-right: 0;
       margin-top: 0px;
       text-align: center;
+      border-radius: 0;
 
       &-header {
         font-size: 32px;
@@ -228,6 +241,7 @@
       height: 297px;
       border-radius: 12px;
       overflow: hidden;
+      border-radius: 0;
 
       & img {
         height: 100%;
