--- a/src/scss/_others-responsive.scss
+++ b/src/scss/_others-responsive.scss
@@ -146,6 +146,16 @@
 
 @media (max-width: 600px) {
   .header {
+    align-items: flex-end;
+
+    & .logo {
+      width: 150px;
+      transform: translateY(2px);
+
+      & img {
+        width: 100%;
+      }
+    }
     & .links {
       position: absolute;
       top: 73.2px;
