--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -78,6 +78,11 @@ html {
           font-size: 15px;
           padding-left: 20px;
           transform: translateY(50%);
+          transition: all 300ms ease-in-out;
+
+          &.up {
+            transform: translateY(0%);
+          }
         }
 
         & input,
