--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -127,6 +127,19 @@ html {
         padding: 15px 40px;
         border: none;
       }
+
+      & .form-sent-message {
+        color: c.$pri_white;
+        font-weight: c.$font-weight_bold;
+        font-size: 30px;
+        align-self: center;
+        margin-top: 30px;
+        display: none;
+
+        &.show {
+          display: block;
+        }
+      }
     }
   }
 }
