--- a/src/scss/_others-responsive.scss
+++ b/src/scss/_others-responsive.scss
@@ -145,6 +145,11 @@
 }
 
 @media (max-width: 600px) {
+  #header-container {
+    padding: 20px 0;
+    height: auto;
+  }
+
   .header {
     align-items: flex-end;
 
@@ -156,6 +161,7 @@
         width: 100%;
       }
     }
+
     & .links {
       position: absolute;
       top: 68px;
@@ -253,7 +259,7 @@
 
   #hero-container {
     width: 100%;
-    margin-top: 94.5px;
+    margin-top: 73.2px;
   }
 
   .hero {
