--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -236,4 +236,12 @@
 }
 
 @import 'shared';
+
+.bg-pattern.pattern-1 {
+  position: absolute;
+  top: 400px;
+  left: 0;
+  z-index: -1;
+}
+
 @import 'about-responsive';
