--- a/src/scss/_shared.scss
+++ b/src/scss/_shared.scss
@@ -1,10 +1,17 @@
 @use 'config' as c;
 
+html {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
+
 body {
+  position: relative;
   font-family: c.$font-family;
   background: c.$pri_white;
   overflow-x: hidden;
-  min-width: 100%;
+  max-width: 100vw;
+  min-height: 100vh;
 }
 
 #header-container {
@@ -51,6 +58,7 @@ body {
         text-transform: uppercase;
         letter-spacing: 2px;
         color: c.$sec_dark-grey;
+        font-weight: 500;
 
         &:after {
           content: '';
@@ -66,6 +74,17 @@ body {
         &:hover {
           &:after {
             width: 100%;
+          }
+        }
+
+        &.active {
+          &:after {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: 0px;
+            width: 100%;
+            height: 1px solid c.$sec_dark-grey;
           }
         }
       }
@@ -84,7 +103,8 @@ body {
 .bg-pattern.pattern-1 {
   position: absolute;
   top: 600px;
-  z-index: 1;
+  left: 0;
+  z-index: -1;
 }
 
 #cta-container {
@@ -198,6 +218,10 @@ footer {
             width: 100%;
           }
         }
+
+        &.active {
+          text-decoration: underline;
+        }
       }
     }
   }
@@ -270,7 +294,9 @@ footer {
   }
 }
 
-.bg-pattern.pattern-1,
 .bg-pattern.pattern-2 {
-  display: none;
+  position: absolute;
+  top: 120%;
+  right: -20%;
+  z-index: -1;
 }
